--- a/momentum-stub.tex
+++ b/momentum-stub.tex
@@ -63,7 +63,7 @@ We tested these hypotheses by conducting a large number of two-body inelastic co
 \begin{figure}[h]
 \begin{center}
 %\includegraphics[width=\columnwidth]{IMG_6253.jpg}
-\includegraphics[width=\columnwidth]{fig1.png}
+%\includegraphics[width=\columnwidth]{figures/fig1.png}
 \end{center}
 \caption{Momentum test track used for experiments. Total length \SI{2.1}{\meter}.}
 \label{fig:methods1}
@@ -94,7 +94,7 @@ Dr Evangelista will help with this.
 
 \begin{figure}
 \begin{center}
-\includegraphics{inelastic.pdf}
+\includegraphics{figures/inelastic.pdf}
 \end{center}
 \caption{Dr Evangelista will fix this. Position data for a typical inelastic collision with equal masses, $m_1=m_2=\SI{0.3}{\kilo\gram}$. Initially, $m_2$ is stationary and $m_1$ is moving at \SI{0.62}{\meter\per\second}. The masses collide at $t=\SI{1.5}{\second}$. After the collision, $m_1$ and $m_2$ are both moving with velocity $v_f=\SI{0.3}{\meter\per\second}$. }
 \label{fig:results1}
@@ -102,7 +102,7 @@ Dr Evangelista will help with this.
 
 \begin{figure}
 \begin{center}
-\includegraphics{momentum-change.pdf}
+\includegraphics{figures/momentum-change.pdf}
 \end{center}
 \caption{Dr Evangelista will fix this. Change in momentum ($\Delta p$) during all inelastic collisions. $\Delta p = \SI{-0.01\pm0.06}{\kilo\gram\meter\per\second}$ (mean $\pm$ s.d.). The mean $\Delta p$ is not significantly different from \SI{0}{\kilo\gram\meter\per\second} (one-sample $t$-test, $n=72$, d.f.=71, $p=0.2596$).}
 \label{fig:results2}
@@ -115,6 +115,6 @@ Dr Evangelista will help with this.
 We thank \student{YOU FILL IN}, C.~Payette, J.~Bartholomew, B.~Turner, K.~Mauger, and S.~McCormick for useful advice and comments on the manuscript, and A.~Hahn and S.~Kealy for advice on the design of experiment and learning objectives. Major lab equipment was gifted by the Alumni Association at Morristown-Beard School. This work was funded by ONR \#N123456789, AFOSR, NIH, and the National Science Foundation. 
 
 \bibliographystyle{apsrev4-1} % Tell bibtex which bibliography style to use
-\bibliography{momentum} % Tell bibtex which .bib file to use (this one is some example file in TexLive's file tree)
+\bibliography{references/momentum} % Tell bibtex which .bib file to use (this one is some example file in TexLive's file tree)
 
 \end{document}
