--- a/references/momentum.bib
+++ b/references/momentum.bib
@@ -1,3 +1,27 @@
+@article{ortega-2021-momentum,
+author={Ortega, Antonella and Evangelista, Dennis},
+year={2021},
+title={Is momentum conserved?},
+journal={{Proceedings of the MBS Science Department A: Physical Sciences}},
+volume={21},
+pages=3}
+
+@book{coriolis-1829-calcul,
+author={de Coriolis, Gaspard-Gustave},
+year={1829},
+title={{Du Calcul de l'Effet des Machines}},
+address={Paris},
+publisher={Carilian-Goeury},
+url={https://gallica.bnf.fr/ark:/12148/bpt6k1068268.texteImage},
+}
+
+@book{duchatelet-1741-reponse,
+author={{du Ch{\^a}telet, {\'E}milie}},
+year={1741},
+title={{R{\'e}ponse de Madame la Marquise du Chastelet, a la lettre que M. de Mairan}},
+address={Brussels},
+publisher={Foppens}}
+
 @book{newton-1687-principia,
 author={Newton, Isaac},
 year={1687},
