--- a/period8/momentum-becker.tex
+++ b/period8/momentum-becker.tex
@@ -1,4 +1,4 @@
-\documentclass[aps,prl,reprint]{revtex4-1}
+\documentclass[aps,prl,preprint]{revtex4-1}
 
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{siunitx}
@@ -18,17 +18,18 @@
 \usepackage{lineno}
 
 \begin{document}
-%\linenumbers
-\title{Please decide on a title}
-\author{Your Name}
-\email{flastname\_25@mbs.net}
+\linenumbers
+\title{Is 30\% a lot?}
+\author{Adison Becker}
+\email{abecker\_25@mbs.net}
 \author{D Evangelista}
-\affiliation{Morristown Beard School}
+\affiliation{Morristown-Beard School}
 
 \newcommand{\student}[1]{{\textcolor{red}{#1}}}
 
 \begin{abstract}
-Momentum is the product of mass times velocity ($\vec{p}=m\vec{v}$), and kinetic energy of a moving mass is given by $\frac{1}{2}mv^2$. Both are potentially useful for understanding the mechanics of collisions, but while previous studies have examined momentum conservation during inelastic collisions \cite{ortega-2021-momentum}, they have not considered energy conservation during elastic collisions. We examined \student{YOU FILL IN...}  We found \student{YOU FILL IN...}\end{abstract}
+Momentum is the product of mass times velocity ($\vec{p}=m\vec{v}$), and kinetic energy of a moving mass is given by $\frac{1}{2}mv^2$. Both are potentially useful for understanding the mechanics of collisions, but while previous studies have examined momentum conservation during inelastic collisions \cite{ortega-2021-momentum}, they have not considered energy conservation during elastic collisions. We examined \student{the energy conserved in an elastic collision between carts on a track}. \student{We examined 1D inelastic collisions between two carts at varying weights to see if energy decreases. Many different people conducted the same experiment, again all different weights and directions. We found that energy is not conserved, it decreases.
+}\end{abstract}
 \maketitle
 
 \section{Introduction}
@@ -62,10 +63,10 @@ We tested these hypotheses by conducting a large number of two-body elastic coll
 
 \section{Methods and materials}
 \subsection{Elastic collision tests}
-Elastic collision tests ($n=80$) were conducted using a \SI{2.1}{\meter} aluminum momentum test track (Vernier; Beaverton, OR; see \fref{fig:methods1}). The test track was outfitted with two small wheeled carts (mass of cart \SI{0.3}{\kilo\gram}) with simple sliding contact bearings; mass of each cart could be increased by addition of up to four \SI{0.125}{\kilo\gram} masses for a total mass of \SI{0.8}{\kilo\gram}. The mass was measured using an electronic balance (Ohaus; Parsippany, NJ).    Magnets of identical polarity allowed the carts to bounce after the elastic collision. Carts were actuated by hand to provide initial velocities. The position of the two carts was measured using two ultrasound range sensors (Go Direct; Vernier; Beaverton, OR). Sensor data were logged at \SI{20}{\hertz} sampling frequency, via a wireless Bluetooth link, using the Graphical Analysis app (Vernier; Beaverton, OR) running on an iPad Air (Apple; Cupertino, CA). From the position data, the slope of position versus time was used to estimate velocities before and after the collision.  The mass, velocity, and direction down the track were varied haphazardly.   
+Elastic collision tests ($n=80$) were conducted using a \SI{2.1}{\meter} aluminum momentum test track (Vernier; Beaverton, OR; see \fref{fig:methods1}). The test track was outfitted with two small wheeled carts (mass of cart \SI{0.3}{\kilo\gram}) with simple sliding contact bearings; mass of each cart could be increased by addition of up to four \SI{0.125}{\kilo\gram} masses for a total mass of \SI{0.8}{\kilo\gram}. The mass was measured using an electronic balance (Ohaus; Parsippany, NJ).    Magnets of opposite polarity allowed the carts to stick after the inelastic collision. Carts were actuated by hand to provide initial velocities. The position of the two carts was measured using two ultrasound range sensors (Go Direct; Vernier; Beaverton, OR). Sensor data were logged at \SI{20}{\hertz} sampling frequency, via a wireless Bluetooth link, using the Graphical Analysis app (Vernier; Beaverton, OR) running on an iPad Air (Apple; Cupertino, CA). From the position data, the slope of position versus time was used to estimate velocities before and after the collision.  The mass, velocity, and direction down the track were varied haphazardly.   
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=\columnwidth]{figures/fig1/IMG_8061_cropped.jpg}
+\includegraphics[width=\columnwidth]{../figures/fig1/IMG_8061_cropped.jpg}
 %\includegraphics[width=\columnwidth]{IMG_6253.jpg}
 %\includegraphics[width=\columnwidth]{figures/fig1.png}
 \end{center}
@@ -93,7 +94,7 @@ For a nondimensional comparison, we also computed the ratio of the change of ene
 \Fref{fig:results1} shows the position data for a typical elastic collision with equal masses, $m_1=m_2=\qty{0.3}{\kilo\gram}$. Before the collision, $m_2$ is stationary while $m_1$ approaches with velocity $v_1=\qty{0.3}{\meter\per\second}$. The masses collide at $t=\qty{2.1}{\second}$. After the collision, $m_1$ is stopped, while $m_2$ is moving with a velocity $v_{2,f}=\qty{0.3}{\meter\per\second}$. 
 \begin{figure}
 \begin{center}
-\includegraphics{figures/fig2/elastic.pdf}
+\includegraphics{../figures/fig2/elastic.pdf}
 \end{center}
 \caption{Position data for a typical elastic collision with equal masses, $m_1=m_2=\qty{0.3}{\kilo\gram}$. Initially, $m_2$ is stationary and $m_1$ is moving at $v_{1,0}=\qty{0.3}{\meter\per\second}$. The masses collide at $t=\SI{2.1}{\second}$. After the collision, $m_2$ is moving with velocity $v_{2,f}=\qty{0.3}{\meter\per\second}$. }
 \label{fig:results1}
@@ -102,19 +103,21 @@ For a nondimensional comparison, we also computed the ratio of the change of ene
 \Fref{fig:results2} shows a bar plot of the change in energy during all collisions, $\Delta E = \qty{-0.01\pm0.02}{\joule}$ (mean$\pm$s.d.). The mean $\Delta E$ is not significantly different from \qty{0}{\joule} (one-sample $t$-test, n=80, d.f.=79, p=0.2596). 
 \begin{figure}
 \begin{center}
-\includegraphics{figures/fig3/energy_change.pdf}
+\includegraphics{../figures/fig3/energy_change.pdf}
 \end{center}
 \caption{Change in energy ($\Delta E$) during all elastic collisions. $\Delta E = \qty{-0.01\pm0.02}{\joule}$ (mean $\pm$ s.d.). The mean $\Delta E$ is not significantly different from \qty{0}{\joule} (one-sample $t$-test, n=80, d.f.=79, p=0.2596).}
 \label{fig:results2}
 \end{figure}
 
 \section{Discussion}
-\student{YOU FILL IN. You will probably write one paragraph using your results to answer if energy is conserved or not. You will probably then write a second paragraph discussing limitations of your findings or proposing some sort of follow-on experiment to do next.}
+\student{We conducted 81 different collisions throughout the experiment. The start of the collision had $m_1$ moving with $m_2$ stopped. This scenario is $E_0 = \frac{1}{2}mv_{1,0}^2$, or original energy. The end of the collision is when $m_1$ hits $m_2$. $m_1$ should be slowed and or stopped and $m_2$ should now be moving. This scenario is $E_f=\frac{1}{2} m_1 v_{1,f}^2 + \frac{1}{2} m_2 v_{2,f}^2$, or energy final. If these two equations were equivalent, then that would mean energy was conserved. In our case $E_f$ was less than $E_0$, meaning energy was lost. The original energy average was \qty{0.038}{\joule}. The change in energy was \qty{-0.01\pm0.02}{\joule}. This is not greatly different from zero, however almost 30\% of energy was lost.}
+
+\student{How much can we say was experimental error and what caused the energy loss? We made our experiment almost personal error proof. We used many different people with their carts at various weights, this along with pushing the carts both ways takes gravity out of the cause. The bias would have been canceled out by the amount of times it was tested. The friction was very minimal, science can never have a frictionless surface. The same case with a perfect vacuum. The only feasible cause for energy loss would be during the collision. Our lab has its limits on what can be done. An experiment needs to be fairly small scale, in a less controlled environment i.e. weather conditions and kids, etc. The best experiment to do next would be one on a larger scale to see if the number is as close to zero. A larger scale with a more precise method could give us the correct solution. If E0 and Ef were larger numbers, we might see a larger difference in energy loss, or we could see a small number again. This would better answer the question if energy is conserved.}
 
 \section{Acknowledgements}
-We thank \student{YOU FILL IN}, C.~Payette, J.~Bartholomew, B.~Turner, K.~Mauger, and S.~McCormick for useful advice and comments on the manuscript, and A.~Hahn, S.~Kealy, K~Muttick, and A.~Sankar, for advice on the design of experiment and learning objectives. Major lab equipment was gifted by the Alumni Association at Morristown Beard School. This work was funded by ONR \#N123456789, AFOSR, NIH, and the National Science Foundation. 
+We thank \student{FILLIN}, C.~Payette, J.~Bartholomew, B.~Turner, K.~Mauger, and S.~McCormick for useful advice and comments on the manuscript, and A.~Hahn, S.~Kealy, K~Muttick, and A.~Sankar, for advice on the design of experiment and learning objectives. Major lab equipment was gifted by the Alumni Association at Morristown-Beard School. This work was funded by ONR \#N123456789, AFOSR, NIH, and the National Science Foundation. 
 
 \bibliographystyle{apsrev4-1} % Tell bibtex which bibliography style to use
-\bibliography{references/momentum} % Tell bibtex which .bib file to use (this one is some example file in TexLive's file tree)
+\bibliography{../references/momentum} % Tell bibtex which .bib file to use (this one is some example file in TexLive's file tree)
 
 \end{document}
